public/css/style.css
/*////////////// Header Layout //////////////*/

header {
  margin-top: 30px;
  height: 5.1 em;
  text-align: center;
}

header img {
  display: inline;
  vertical-align: middle;
}

nav {
  width:inherit;
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
}


/*////////////// Fonts //////////////*/

h1 {
  font-family: 'Cantata One', serif;
  text-shadow: 0 0 0.2em white, 0 0 0.2em white;
  font-size: 5em;
  display: inline;
  vertical-align: middle;
}

h2 {
  font-family: 'Cantata One', serif;
}

h2, h3, h4, h5 {
  text-align: center;
}

body, p, a {
  font-family: 'Raleway', sans-serif;
}

/*////////////// Links //////////////*/

a, a:visited, a:hover {
  color: black;
  padding: 3px;
  text-decoration: none;
}

.nav {
  display: inline-block;
  background: rgba(255, 255, 51, 0.2);
  font-size: 1em;
  letter-spacing: 1.5px;
  padding: 7px 7px;
  margin: 1px;
  width: 10em;
  border: 1px solid black;
}

.nav:hover {
  background: rgba(255, 255, 0, 0.5);
}

.glow:hover {
  background: rgba(255, 255, 0, 0.5);
}

/*////////////// Forms //////////////*/

.fbutton {
  display: inline-block;
  background: rgba(255, 255, 51, 0.2);
  font-size: .75em;
  letter-spacing: 1.25px;
  padding: 5px 5px;
  margin: 1px;
  min-width: 7.5em;
  border: 1px solid black;
}

.fbutton:hover {
  background: rgba(255, 255, 0, 0.5);
}

input[type=text] {
  border: 1px solid black;
  height: 1.75em;
}

/*////////////// Body Divs //////////////*/

*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background:url('../images/light_entering.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
}

form {
    display: inline-block;
}

.container {
  max-width: 70%;
  margin: 0 auto;
  height: 100%;
}

.left, .right {
  background: rgba(255, 255, 255, 0.2);
  border: 1px solid black;
  padding: 10px;
  width: 49.2%;
  max-width: 49.2%;
  min-height: 300px;
  margin-bottom: -300px;
  display: inline-block;
  vertical-align: top;
  text-align: center;
}

.left {
  margin: 0 2px 0 4px;
}

.right {
  margin: 0 3px 0 1px;
}

